# fileconverter

./: .gitignore  AGENTS.md  README.md
BACKEND/: pyproject.toml  requirements.txt
BACKEND/adapters/input/http/: conversion_router.py
BACKEND/adapters/input/websocket/: __init__.py  connection_manager.py  progress_websocket.py  ws_router.py
BACKEND/adapters/output/converters/: image_to_pdf_adapter.py  office_to_pdf_adapter.py  pdf_to_docx_adapter.py  pdf_to_docx_ocr_adapter.py  pdf_to_image_adapter.py
BACKEND/adapters/output/storage/: local_file_storage_adapter.py
BACKEND/application/use_cases/: convert_file.py  list_supported_conversions.py
BACKEND/domain/: entities.py
BACKEND/domain/ports/input/: convert_file_use_case.py  list_supported_conversions_use_case.py
BACKEND/domain/ports/output/: converter_registry_port.py  file_converter_port.py  file_storage_port.py  progress_notifier_port.py
BACKEND/infrastructure/: config.py  main.py
BACKEND/tests/: conftest.py
BACKEND/tests/integration/: test_conversion_pipeline.py
BACKEND/tests/unit/: test_domain.py  test_http_router.py  test_image_to_pdf_adapter.py  test_office_to_pdf_adapter.py  test_pdf_to_docx_adapter.py  test_pdf_to_image_adapter.py  test_storage.py  test_use_cases.py  test_websocket.py
DOCS/BACKEND/PLANS/: docx-to-pdf.md  image-to-pdf.md  pdf-to-docx.md  pdf-to-image.md
DOCS/BACKEND/SPECS/: docx-to-pdf.md  image-to-pdf.md  pdf-to-docx.md  pdf-to-image.md
DOCS/FRONTEND/PLANS/: conversion-view.md  history-view.md  home-view.md  settings-view.md
DOCS/FRONTEND/SPECS/: conversion-view.md  history-view.md  home-view.md  settings-view.md
